fix scrollbars

--- a/Source/Blazorise.Material/Styles/_reboot.scss
+++ b/Source/Blazorise.Material/Styles/_reboot.scss
@@ -8,8 +8,3 @@ body {
     line-height: 1.5rem;
     letter-spacing: 0.0313rem;
 }
-
-body :is(:hover,:focus)::-webkit-scrollbar-thumb {
-    background: var(--mui-outline);
-    border-radius: 1rem;
-}
